# AutoDiCE_examples

./: .gitignore  01.alexnet.interface.py  02.alexnet.frontend.py  CMakeLists.txt  README.md  alexnet.cpp  alexnet.py  bench_mpi_multinode.cpp  bench_multinode.cpp  commbench.cpp  engine.cpp  engine.h  mapping.json  multinode.cpp  multinode_bench.cpp  platform.txt  search.py  trthello.cpp
models/: CMakeCache.txt  Makefile  cmake_install.cmake  hello  multinode  multinode.cpp  rankfile  receiver.json  sender.json
ncnn/include/ncnn/: platform.h
ncnn/lib/: libncnn.so.1
tools/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  onnx.pb.cc  onnx.pb.h  onnx2ncnn  onnx2ncnn.cpp
